--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="main-menu collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-left">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="service.html">Service</a></li>
                 <li role="presentation" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> BOOKING <span class="caret"></span> </a>
                   <ul class="dropdown-menu">
@@ -511,7 +511,7 @@
 
 
 <footer>
-<div class="footer-bottom-area bg-dark-light section-padding-sm">
+<div class="footer-bottom-area bg-dark-light section-padding-sm" id=about>
                 <div class="container">
                     <div class="row widgets footer-widgets">
 
