--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
               <ul class="nav navbar-nav navbar-left">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="service.html">Service</a></li>
                 <li role="presentation" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> BOOKING <span class="caret"></span> </a>
                   <ul class="dropdown-menu">
                     <li><a href="booking.html">Booking Page</a></li>
-                    <li><a href="service_detail.html">Packages Deatil</a></li>
+                    <li><a href="#packages">Packages Deatil</a></li>
                     <li><a href="blog.html">Blog</a></li>
                   </ul>
                 </li>
-                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
             <!-- /.navbar-collapse --> 
@@ -76,7 +75,7 @@
     <div class="container text-center parallax-section">
       <div class="row text-center">
         <div class="pdn">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="packages">
           
 		  <h1 class="panel-heading animated fadeInRight">Ready to Enjoy your Tour?</h1>
 		  <p class="caption animated fadeInLeft">Book Expert travel advice and accomodation at a moment's notice. just pick a<br>
@@ -529,7 +528,6 @@
                                 <ul>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
                                     <li><a href="#">Booking</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </ul>
@@ -537,7 +535,7 @@
                         </div>
 
                         
-                        <div class="col-lg-4 col-md-6 col-12">
+                        <div class="col-lg-4 col-md-6 col-12" id="contact">
                             <div class="single-widget widget-contact">
                                 <h5 class="widget-title">Contact Us</h5>
                                 <ul>
